app minor changes needed

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -160,4 +160,8 @@ page-home {
             }
         }
     }
+    .searchbar-clear-icon{
+        background: none !important;
+        
+    }
 }
