--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,3 +1,4 @@
+@import "../../node_modules/ionic2-auto-complete/auto-complete";
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
 * {
     font-family: 'Roboto', sans-serif;
