final touches before search

--- a/src/pages/chatscreen/chatscreen.scss
+++ b/src/pages/chatscreen/chatscreen.scss
@@ -124,4 +124,9 @@ page-chatscreen {
             }
         }
     }
+    #chat{
+        position: relative;
+        padding-bottom: 42px;
+    }
+
 }
